@@ -543,4 +543,4 @@ LIBTOOL_DEPS = @LIBTOOL_DEPS@
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
 
-AUTOMAKE_OPTIONS = foreign no-dependencies
+# AUTOMAKE_OPTIONS = foreign
